fix z-index order

--- a/tardigrada/src/app/header/header.component.css
+++ b/tardigrada/src/app/header/header.component.css
@@ -16,7 +16,7 @@ img {
   width: 100%;
   height: 100%;
   background-color: #220315;
-  z-index: 1;
+  z-index: 10;
 }
 
 #menu-box {
@@ -65,7 +65,7 @@ body:after {
   right: 50px;
   height: 2px;
   width: 48px;
-  z-index: 101;
+  z-index: 11;
 }
 #topMenuLine {
   top: 40px;
